# e2x-exam-hub

./: README.md  pyproject.toml
config/: config-exam.yaml
config/nbgrader/student_exam_courses/IT_Recht-Klausur/: IT_Recht-Klausur.SS24BWI.PZ1.csv  IT_Recht-Klausur.SS24BWI.PZ1.yaml
config/nbgrader/student_exam_courses/Machine-Learning-Exam/: Machine-Learning-Exam.WS24.PZ1.yaml
config/nbgrader/student_exam_courses/Machine-Learning-Exam/WS24/: Machine-Learning-Exam.WS24.PZ1.csv
e2x_exam_hub/: __init__.py  exam_hub.py  mounts.py  utils.py
e2x_exam_hub/schema/: __init__.py  base.py  course.py  exchange.py  mounts.py  nbgrader.py  server.py  utils.py  volume.py
