[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "e2x_exam_hub"
description = "An extension for JupyterHub to support e2x exams"
readme = "README.md"
requires-python = ">=3.7"
license = "AGPL-3.0"
authors = [
    {name = "Tim Metzler", email = "tim.metzler@h-brs.de"},
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["jupyterhub", "e2x", "exams", "education"]
dynamic = ["version"]
dependencies = [
    "traitlets",
    "pandas",
    "pyyaml",
    "pydantic",
]

[project.urls]
Issues = "https://github.com/Digiklausur/e2x-exam-hub/issues"
Source = "https://github.com/Digiklausur/e2x-exam-hub"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "hatchling",
    "tbump"
]

[tool.hatch.version]
path = "e2x_exam_hub/_version.py"

[tool.tbump]
github_url = "https://github.com/Digiklausur/e2xgrader/"

[tool.tbump.version]
current = "0.1.0-dev1"

regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (?P<dev>-dev\d+)?
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

# Files with the version present
[[tool.tbump.file]]
src = "e2x_exam_hub/_version.py"

[tool.ruff]
line-length = 100
ignore-init-module-imports = true
select = ["F", "E", "I"]